# SerperScrapeTool

./: .env  README.md  pyproject.toml  test.py
src/serper_scrape_tool/: __init__.py  tool.py
src/serper_scrape_tool_maz/: __init__.py  tool.py
